added API tickets endpoints, added statistics endpoints, added views for display statistics on dashboard
